k8s/base/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault-PLACEHOLDER_OVERLAY
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: https-internal
      port: 8201
      targetPort: 8201
      protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
---
apiVersion: v1
kind: Service
metadata:
  name: vault-internal
  namespace: vault-PLACEHOLDER_OVERLAY
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
    - name: https-internal
      port: 8201
      targetPort: 8201
      protocol: TCP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/component: server
